--- a/jeromem/ws_samples/pom.xml
+++ b/jeromem/ws_samples/pom.xml
@@ -27,6 +27,16 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <version>2.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <version>2.1.12</version>
+      </dependency>
+      <dependency>
         <groupId>javax.xml</groupId>
         <artifactId>webservices-api</artifactId>
         <version>${webservices-api.version}</version>
@@ -64,27 +74,16 @@
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jaxws-maven-plugin</artifactId>
-        <dependencies>
-          <dependency>
-            <groupId>javax.xml</groupId>
-            <artifactId>webservices-api</artifactId>
-            <version>${webservices-api.version}</version>
-            <scope>provided</scope>
-          </dependency>
-        </dependencies>
+        <artifactId>jaxb2-maven-plugin</artifactId>
         <executions>
           <execution>
             <goals>
-              <goal>wsimport</goal>
+              <goal>xjc</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
-          <wsdlDirectory>src/main/xml/om</wsdlDirectory>
-          <wsdlLocation>../wsdl</wsdlLocation>
-          <keep>true</keep>
-          <xnocompile>true</xnocompile>
+          <schemaDirectory>src/main/xml/</schemaDirectory>
         </configuration>
       </plugin>
       <plugin>
@@ -100,6 +99,7 @@
             </goals>
             <configuration>
               <sources>
+                <source>target/generated-sources/jaxb/java</source>
                 <source>target/jaxws/wsimport/java</source>
                 <source>src/main/java</source>
               </sources>
